feat(app-config): change splash and icons

--- a/app.json
+++ b/app.json
@@ -1,14 +1,15 @@
 {
   "expo": {
-    "name": "magic-bonfire",
+    "name": "magic bonfire",
     "slug": "magic-bonfire",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "owner": "ffauna",
+    "icon": "./assets/magic-bonfire-icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/magic-bonfire-splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,13 +18,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/magic-bonfire-icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
     }
   }
 }
