feat(config): Ignore expo-doctor error

--- a/package.json
+++ b/package.json
@@ -28,5 +28,12 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3"
   },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
   "private": true
 }
